[package]
name = "intentra"
version = "0.1.0"
edition = "2021"
authors = ["Archit"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArchitSharma2357/intentra"
homepage = "https://github.com/ArchitSharma2357/intentra"
documentation = "https://docs.rs/intentra"
description = "High-performance multi-peer UDP transport protocol with cryptographic authentication and DoS protection"
keywords = ["udp", "networking", "transport", "security", "cryptography"]
categories = ["network-programming", "cryptography"]
readme = "README.md"

[lib]
name = "intentra"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
x25519-dalek = "2"
sha2 = "0.10"
noise-protocol = "0.2"
bytes = "1"
parking_lot = "0.12"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
metrics = []
unstable = []